<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:src="@mipmap/ic_launcher"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_camera"
            android:textSize="24sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/anthracite"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/surname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/phone"
            android:textSize="20sp" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="#283593"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="#C62828"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>